Port to 1.21.1 and a few small changes to make it fit better